adjust spacing, fix observer support

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -46,17 +46,6 @@ body {
   }
 
   transition: color 0.6s ease-in-out, background 0.6s ease-in-out;
-
-  @media (max-width: $sm) {
-    padding: .6rem;
-    border-color: $color-background;
-    &:after {
-      display: none;
-    }
-    &.day {
-      border-color: $color-background-day;
-    }
-  }
 }
 
 main {
